--- a/php-integration/style.css
+++ b/php-integration/style.css
@@ -29,9 +29,8 @@ main {
     background-color: #fcf6a9;
     display: flex;
     justify-items: center;
-    height: 100%;
     flex-wrap: wrap;
-        padding: 20px;
+    padding: 20px;
 }
 
 aside {
@@ -66,4 +65,17 @@ textarea {
     margin: 4px 2px;
     cursor: pointer;
     padding: 10px 20px;
+}
+
+#output {
+    width: 100%;
+    height: 200px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    margin-top: 5px;
+    overflow-y: scroll;
 }
